--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.6",
+    "node-monkey": "^1.1.1",
     "nodemon": "^2.0.4",
     "web-push": "^3.4.4",
     "xml2js": "^0.4.23",
